PetRecommender/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petrecommend-ui-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb  # Use this instead of the deprecated annotation
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petrecommend-ui
                port:
                  number: 8000
