PetRecommender/pet-ui-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petrecommend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: petrecommend-ui
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: petrecommend-ui
    spec:
      containers:
      - image: public.ecr.aws/y4x6u5w4/genai:v5
        imagePullPolicy: Always
        name: petrecommend-ui
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: petrecommend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: petrecommend-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petrecommend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: petrecommend
              port:
                number: 80
